--- a/ProjectEuler/HackerRank/HackerRank.csproj
+++ b/ProjectEuler/HackerRank/HackerRank.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="HeapsFindeRunningMediaBad5.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="C5" Version="2.5.3" />
   </ItemGroup>
 
